force-app/main/default/objects/Fee_Value_Master__c/Fee_Value_Master__c.object-meta.xml
<CustomObject>
    <label>Fee Value Master</label>
    <nameField>
        <displayFormat>FVM-{0000}</displayFormat>
        <label>Fee Value Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Value Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>