force-app/main/default/objects/Fee_Value_Master__c/fields/Cap__c.field-meta.xml
<CustomField>
    <fullName>Cap__c</fullName>
    <label>Cap</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>