force-app/main/default/objects/Fee_Value_Master__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <formula>TEXT( Fee_Type_Master__r.Fee_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>