force-app/main/default/objects/Fee_Value_Master__c/fields/Fee_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_Code__c</fullName>
    <formula>TEXT(Fee_Type_Master__r.Fee_Type_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Type Code</label>
    <type>Text</type>
</CustomField>