force-app/main/default/objects/Fee_Value_Master__c/fields/Fee_Type_Master__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_Master__c</fullName>
    <label>Fee Type Master</label>
    <referenceTo>Fee_Type_Master__c</referenceTo>
    <relationshipLabel>Fee Value Master</relationshipLabel>
    <relationshipName>Fee_Value_Master</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>