force-app/main/default/objects/Fee_Value_Master__c/fields/Max_waiver_amount_without_Approval__c.field-meta.xml
<CustomField>
    <fullName>Max_waiver_amount_without_Approval__c</fullName>
    <label>Max waiver amount without Approval</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>